Vai te lascar Bruno
Signed-off-by: Souza123-Prog <gabrielmclt336@gmail.com>

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             copyright 2025 <br>
             todos os direitos reservados Gabriel Sousa
         </h6>
+        <h7>
+            Vai te lacar Bruno
+        </h7>
     </footer>
 </body>
 </html>
