--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Bruno é mesmo gay? Neste site veremos se 
     esse baitola é realmente gay">
     <title>Bruno é gay</title>
-    
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <script> 
