--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     esse baitola é realmente gay">
     <title>Bruno é gay</title>
     <link rel="stylesheet" href="Style.css">
+    <meta name="Keywords" content="Bruno é viado">
 </head>
 <body>
     <script> 
